[Generic] Cleanup some string handling code with more appropriate method calls